--- a/src/assets/css/sidenav.css
+++ b/src/assets/css/sidenav.css
@@ -38,7 +38,8 @@
     color: blue;
 }
 .sidenav .nav-item .nav-icon {
-    font-size: 21px;
+    width: 25px;
+    font-size: 25px;
     margin-right: 10px;
 }
 .sidenav .nav-item .nav-label {
@@ -119,14 +120,11 @@
         margin-right: 0px;
         padding-left: 0px;
     }
-    .sidenav .nav-item .nav-icon {
-        font-size: 16px;
-    }
     .sidenav .nav-item {
         padding: 10px;
     }
-    .sidenav .pfp{
-        padding: 5px;
+    .sidenav .nav-item .nav-icon {
+        font-size: 25px;
     }
     .sidenav .nav-item a, .sidenav .nav-item button {
         padding: 8px 16px;
@@ -179,6 +177,9 @@
     .sidenav .nav-list .hide-icon {
         display: none;
     }
+    .chat {
+        display: none;
+    }
 
     /* other classes for small screen */
     .home {
@@ -196,49 +197,68 @@
     }
 }
 
+
 /* adjust sidenav items for different small screens */
-@media only screen and (min-width: 400px) and (max-width: 480px) {
+@media only screen and (min-width: 420px) and (max-width: 480px) {
     .sidenav .nav-item .nav-icon {
-        font-size: 16px;
-        margin-right: 5px;
-    }
-    .sidenav .nav-item a, .sidenav .nav-item button {
-        padding: 0px 16px;
-    }
-}
-@media only screen and (min-width: 360px) and (max-width: 400px) {
-    .sidenav .nav-item .nav-icon {
-        font-size: 16px;
+        font-size: 20px;
         margin-right: 0px;
     }
     .sidenav .nav-item a, .sidenav .nav-item button {
-        padding: 0px 16px;
+        padding: 0px 20px;
     }
 }
-@media only screen and (min-width: 330px) and (max-width: 360px) {
+@media only screen and (min-width: 390px) and (max-width: 420px) {
     .sidenav .nav-item .nav-icon {
-        font-size: 16px;
+        font-size: 20px;
         margin-right: 0px;
     }
     .sidenav .nav-item a, .sidenav .nav-item button {
-        padding: 0px 13px;
+        padding: 0px 17px;
     }
 }
-@media only screen and (min-width: 300px) and (max-width: 330px) {
+@media only screen and (min-width: 370px) and (max-width: 390px) {
     .sidenav .nav-item .nav-icon {
-        font-size: 16px;
+        font-size: 20px;
         margin-right: 0px;
     }
     .sidenav .nav-item a, .sidenav .nav-item button {
-        padding: 0px 10px;
+        padding: 0px 15px;
     }
 }
-@media only screen and (max-width: 300px) {
+@media only screen and (min-width: 350px) and (max-width: 370px) {
     .sidenav .nav-item .nav-icon {
-        font-size: 16px;
+        font-size: 20px;
         margin-right: 0px;
     }
     .sidenav .nav-item a, .sidenav .nav-item button {
-        padding: 0px 7px;
+        padding: 0px 12px;
+    }
+}
+@media only screen and (min-width: 320px) and (max-width: 350px) {
+    .sidenav .nav-item .nav-icon {
+        font-size: 20px;
+        margin-right: 0px;
+    }
+    .sidenav .nav-item a, .sidenav .nav-item button {
+        padding: 0px 9px;
+    }
+}
+@media only screen and (min-width: 290px) and (max-width: 320px) {
+    .sidenav .nav-item .nav-icon {
+        font-size: 20px;
+        margin-right: 0px;
+    }
+    .sidenav .nav-item a, .sidenav .nav-item button {
+        padding: 0px 6px;
+    }
+}
+@media only screen and (max-width: 290px) {
+    .sidenav .nav-item .nav-icon {
+        font-size: 20px;
+        margin-right: 0px;
+    }
+    .sidenav .nav-item a, .sidenav .nav-item button {
+        padding: 0px 4px;
     }
 }
